--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">تابلوهای شاسی یوتاب در طرح های بسیار متنوع و با کیفیتی بسیار مطلوب به مشتریان عزیز عرضه می گردنند. امکان چاپ طرح های دلخواه مشتریان نیز فراهم گردیده است. همچنین به اطلاع می رساند که هم اکنون تابلوهای شاسی یوتاب با 20 درصد تخفیف زمستانه به فروش می رسند</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary-outline display-5" href="http://youtobgallery.epizy.com/canvas/" target="_blank"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>آلبوم محصول</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary-outline display-5" href="http://youtob.gigfa.com/canvas/" target="_blank"><span class="mbri-image-gallery mbr-iconfont mbr-iconfont-btn"></span>آلبوم محصول</a>
                         <a class="btn btn-md btn-secondary display-5" href="https://www.dropbox.com/s/t5x68bybaro2n3m/Pricing-Canvas.pdf?dl=1"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>لیست قیمت</a></div>
             </div>
 	    
@@ -195,7 +195,7 @@
                         <h4 class="card-title mbr-fonts-style display-5"><strong>(تابلوهای دیواری یوتاب (جدید</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-5">تصاویر زیبا و دلپذیر، امکان چاپ در سایز هاي پیشنهادي، کیفیت بالاي چاپ، مواد، اولیه اصل درجه یک ( جوهر و کاغد چاپ )، گارانتی یکساله، چاپ تصاویر اختصاصی ویژه مشتریان<br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-right"><a href="http://youtobgallery.epizy.com/canvas/" class="btn btn-primary-outline display-5" target="_blank">
+                        <div class="mbr-section-btn align-right"><a href="http://youtob.gigfa.com/canvas/" class="btn btn-primary-outline display-5" target="_blank">
                                 مشاهده آلبوم طرح ها</a></div>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                             پنل های سقفی سه بعدی یوتاب</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-5">طرح هاي گوناگون و زیبا ( 80 عدد طرح ) &nbsp;کیفیت بالاي ساخت و برش پنل گارانتی یکساله<br><br><br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-right"><a href="http://youtobgallery.epizy.com/3dpanels/" class="btn btn-primary-outline display-5" target="_blank">
+                        <div class="mbr-section-btn align-right"><a href="http://youtob.gigfa.com/3dpanels/" class="btn btn-primary-outline display-5" target="_blank">
                                 مشاهده آلبوم طرح ها</a></div>
                     </div>
                 </div>
@@ -228,7 +228,7 @@
                         <p class="mbr-text mbr-fonts-style display-5">تصاویر گوناگون و زیبا ( حدود 2000 عدد تصویر )، امکان چاپ در
 سایز هاي پیشنهادي، کیفیت بالاي چاپ، مواد اولیه اصل درجه یک ( جوهر و کاغد چاپ )، گارانتی یکساله، چاپ <br>تصاویر اختصاصی ویژه مشتریان&nbsp;<br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-right"><a href="http://youtobgallery.epizy.com/skypanels/" class="btn btn-primary-outline display-5" target="_blank">
+                        <div class="mbr-section-btn align-right"><a href="http://youtob.gigfa.com/skypanels/" class="btn btn-primary-outline display-5" target="_blank">
                                 مشاهده آلبوم طرح ها</a></div>
                     </div>
                 </div>
