--- a/index.html
+++ b/index.html
@@ -35,29 +35,35 @@
     
   <meta name="google-site-verification" content="m6ht-PlkGdUxgl0-JVAuVxYrzGIX0mLASiRxVfyLu20" />
 
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "AggregateRating",
-      "itemReviewed": {
-        "@type": "Product",
-        "image": "https://youtob.ir/assets/images/img-3831-1000x750.jpg",
-        "name": "Youtob Sky Panels",
-        "telephone": "021-44753410",
-        "address" : {
-          "@type": "PostalAddress",
-          "streetAddress": "Shahrak Golestan",
-          "addressLocality": "Havanirooz",
-          "addressRegion": "Tehran",
-          "postalCode": "10038",
-          "addressCountry": "IR"
-        }
-      },
-      "ratingValue": "5",
-      "bestRating": "5",
-      "ratingCount": "2569"
-    }
-    </script>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "bestRating": "10",
+    "ratingCount": "2569",
+    "ratingValue": "10"
+  },
+  "image": "https://youtob.ir/assets/images/img-36881-1000x750.jpg",
+  "name": "آسمان مجازی یوتاب",
+  "brand": "یوتاب",
+  "description": "پنل های آسمان مجازی یوتاب",
+  "callSign": "یوتاب",
+  "offers": {
+    "@type": "AggregateOffer",
+    "highPrice": "7400000ريال",
+    "lowPrice": "1050000ريال",
+    "offerCount": "100",
+    "offers": [
+      {
+        "@type": "Offer",
+        "url": "youtob.ir"
+      }
+    ]
+  }
+}
+</script>
 </head>
 <body>
 
