--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   "callSign": "یوتاب",
   "offers": {
     "@type": "AggregateOffer",
+    "priceCurrency": "IRR",
     "highPrice": "7400000ريال",
     "lowPrice": "1050000ريال",
     "offerCount": "100",
