--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
   "name": "آسمان مجازی یوتاب",
   "brand": "یوتاب",
   "description": "پنل های آسمان مجازی یوتاب",
-  "callSign": "یوتاب",
+  "sku": "یوتاب",
+  "isbn": "2020",
+  "review": "آسمان مجازی یوتاب",
   "offers": {
     "@type": "AggregateOffer",
     "priceCurrency": "IRR",
-    "highPrice": "7400000ريال",
-    "lowPrice": "1050000ريال",
+    "highPrice": "7400000",
+    "lowPrice": "1050000",
     "offerCount": "100",
     "offers": [
       {
