--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="alternate" href="https://youtob.ir" hreflang="fa-IR"/>
   <link rel="canonical" href="https://youtob.ir" />
   <meta name="description" content="آسمان مجازی یوتاب سازنده انواع پنل های آسمان مجازی، پنل های سه بعدی و تابلوهای دیواری با طرح های بسیار متنوع، دلخواه مشتری و با کیفیت و دوام بالا و ضمانت طولانی مدت">
-  <meta name="keywords" content="آسمان مجازی,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو,آشپزخانه,اتاق خواب,پذیرایی,عکس,آلبوم,منزل,سقف کاذب,کناف">  
+  <meta name="keywords" content="آسمان مجازی,سقفی,مجازی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو,آشپزخانه,اتاق خواب,پذیرایی,عکس,آلبوم,منزل,سقف کاذب,کناف">  
 
   <title> آسمان مجازی و انواع تابلوهای دیواری یوتاب - صفحه اصلی</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
@@ -48,6 +48,7 @@
   "image": "https://youtob.ir/assets/images/img-36881-1000x750.jpg",
   "name": "آسمان مجازی یوتاب",
   "brand": "یوتاب",
+  "author": "آسمان مجازی یوتاب",
   "description": "پنل های آسمان مجازی یوتاب",
   "sku": "یوتاب",
   "isbn": "2020",
