--- a/eshop.html
+++ b/eshop.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html dir="rtl" lang="fa">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
