--- a/eshop.html
+++ b/eshop.html
@@ -107,32 +107,32 @@
     <div class="col-md-4 mb-3 md-form">
 	  <input name="entry.1642221268" type="hidden" class="form-control" id="userno" value="">
       <label align="center" for="validationTooltip01">نام و نام خانوادگی</label>
-      <input name="entry.1407109593" type="text" dir="rtl" class="form-control" id="validationTooltip01" placeholder="" value=""
+      <input name="entry.1407109593" type="text" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip01" placeholder="" value=""
         required>
     </div>
     <div class="col-md-4 mb-3">
       <label align="right" for="validationTooltip02">تلفن</label>
-      <input name="entry.1248023699" type="number" dir="rtl" class="form-control" id="validationTooltip02" placeholder="ترجیحا با کد شهر" required>
+      <input name="entry.1248023699" type="number" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip02" placeholder="ترجیحا با کد شهر" required>
     </div>
     <div class="col-md-4 mb-3">
       <label for="validationTooltip03">ایمیل</label>
       <div class="input-group">
-        <input name="entry.1553966662" type="email" dir="rtl" class="form-control" id="validationTooltip03" placeholder="" required>
+        <input name="entry.1553966662" type="email" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip03" placeholder="" required>
       </div>
     </div>
 	</div>
 	<div class="form-row">
     <div class="col-md-3 mb-3">
       <label for="validationTooltip04">شهر/استان</label>
-      <input name="entry.1362439446" type="text" dir="rtl" class="form-control" id="validationTooltip04" placeholder="" required>
+      <input name="entry.1362439446" type="text" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip04" placeholder="" required>
     </div>
     <div class="col-md-6 mb-3">
       <label for="validationTooltip05">آدرس</label>
-      <input name="entry.697461848" type="text" dir="rtl" class="form-control" id="validationTooltip05" placeholder="" required>
+      <input name="entry.697461848" type="text" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip05" placeholder="" required>
     </div>
     <div class="col-md-3 mb-3">
       <label for="validationTooltip06">کد پستی</label>
-      <input name="entry.865376613" type="number" dir="rtl" class="form-control" id="validationTooltip06" placeholder="" required>
+      <input name="entry.865376613" type="number" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip06" placeholder="" required>
     </div>
 	<div class="col-md-3 mb-3">
       	<label for="validationTooltip06">آزمون امنیتی</label>
