--- a/eshop.html
+++ b/eshop.html
@@ -104,17 +104,17 @@
    <div class="modal-body">
 	<form id="register-form" align="right" dir="rtl" lang="fa" class="needs-validation" novalidate>
 	<div class="form-row">
-    <div class="col-md-4 mb-3 md-form">
+    <div class="col-auto form-group">
 	  <input name="entry.1642221268" type="hidden" class="form-control" id="userno" value="">
       <label align="center" for="validationTooltip01">نام و نام خانوادگی</label>
       <input name="entry.1407109593" type="text" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip01" placeholder="" value=""
         required>
     </div>
-    <div class="col-md-4 mb-3">
+    <div class="col-auto form-group">
       <label align="right" for="validationTooltip02">تلفن</label>
       <input name="entry.1248023699" type="number" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip02" placeholder="ترجیحا با کد شهر" required>
     </div>
-    <div class="col-md-4 mb-3">
+    <div class="col-auto form-group">
       <label for="validationTooltip03">ایمیل</label>
       <div class="input-group">
         <input name="entry.1553966662" type="email" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip03" placeholder="" required>
@@ -122,19 +122,19 @@
     </div>
 	</div>
 	<div class="form-row">
-    <div class="col-md-3 mb-3">
+    <div class="col-auto form-group">
       <label for="validationTooltip04">شهر/استان</label>
       <input name="entry.1362439446" type="text" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip04" placeholder="" required>
     </div>
-    <div class="col-md-6 mb-3">
+    <div class="col-auto form-group">
       <label for="validationTooltip05">آدرس</label>
       <input name="entry.697461848" type="text" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip05" placeholder="" required>
     </div>
-    <div class="col-md-3 mb-3">
+    <div class="col-auto form-group">
       <label for="validationTooltip06">کد پستی</label>
       <input name="entry.865376613" type="number" dir="rtl" class="form-control input-sm input-inverse display-7" id="validationTooltip06" placeholder="" required>
     </div>
-	<div class="col-md-3 mb-3">
+	<div class="col-auto form-group">
       	<label for="validationTooltip06">آزمون امنیتی</label>
 	<div class="g-recaptcha" data-sitekey="6LewzscUAAAAAOAGE1JT1wyz5XwHudkWIl0KRwqS" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
 	<input class="form-control d-none" data-recaptcha="true" required data-error="لطفا آزمون امنیتی را انجام دهید" id="validationTooltip07" required>
