--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 	          		<input class="form-control d-none" data-recaptcha="true" id="validationTooltip15" required>
     		</div>
 		<br>
-		<div class="col-md-12 col-auto buttons-wrap"><button type="submit" id="submit-form" class="btn btn-primary display-4 ld-ext-left"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال
+		<div class="col-auto buttons-wrap"><button type="submit" id="submit-form" class="btn btn-primary display-4 ld-ext-left"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال
 		<div class="ld ldld bare align-middle"
        		style="width:1em;height:1em">
   		</div>
